<resources>
    <string name="app_name">Jahez Challenge</string>
    <string name="restaurant_name" translatable="false">Restaurant Name</string>
    <string name="no_data_found">No Data Found</string>
    <string name="settings">Settings</string>
    <string name="distance">Distance</string>
    <string name="offers">Offers</string>
    <string name="rating">Rating</string>
    <string name="sort_restaurants">Sort Restaurants</string>
    <string name="arabic" translatable="false">عربي</string>
    <string name="english" translatable="false">English</string>
    <string name="language">Language</string>
    <string name="apply">Apply</string>
</resources>