<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="net.jahez.jahezchallenge.home.vm.HomeActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/unit_1x">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:text="@string/settings"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivClose" />

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/unit_1x"
            android:layout_marginEnd="@dimen/unit_1x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cross"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_sortby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:text="@string/sort_restaurants"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_sorting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_sortby"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_distance"
                style="@style/Theme.Jahez.Widget.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:checkable="true"
                android:text="@string/distance"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toStartOf="@id/chip_rating"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_sortby" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_rating"
                style="@style/Theme.Jahez.Widget.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:checkable="true"
                android:text="@string/rating"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toStartOf="@id/chip_offer"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@id/chip_distance"
                app:layout_constraintTop_toBottomOf="@id/text_sortby" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_offer"
                style="@style/Theme.Jahez.Widget.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:checkable="true"
                android:text="@string/offers"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@id/chip_rating"
                app:layout_constraintTop_toBottomOf="@id/text_sortby" />

        </com.google.android.material.chip.ChipGroup>


        <TextView
            android:id="@+id/text_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:text="@string/language"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group_sorting" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_language"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_english"
                style="@style/Theme.Jahez.Widget.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:checkable="true"
                android:text="@string/english"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toStartOf="@id/chip_arabic"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_language" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_arabic"
                style="@style/Theme.Jahez.Widget.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:checkable="true"
                android:text="@string/arabic"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@id/chip_english"
                app:layout_constraintTop_toBottomOf="@id/text_language" />

        </com.google.android.material.chip.ChipGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/apply"
            app:layout_constraintTop_toBottomOf="@id/chip_group_language" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
